k8s/production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gymit
  labels:
    name: gymit
    environment: production
    app.kubernetes.io/name: gymit-system
    app.kubernetes.io/part-of: gymit
